# CMakeConsole

./: .gitignore  3Δ Υπολογιστική Γεωμετρία.pptx  CMakeLists.txt  Readme.md
CMakeConsole/: CMakeConsole.cpp  CMakeConsole.h  CMakeLists.txt
CMakeConsole/VVRFramework/include/VVRScene/: ui_window.h  utils.h
CMakeConsole/VVRFramework/lib/: GeoLib.lib  GeoLib_d.lib  VVRScene.lib  VVRScene_d.lib
CMakeConsole/resources/: points.txt
test/siren/: dataio.py  loss_functions.py  requirements.txt  run_sdf.py  scaling.txt  sdf_meshing.py  sdf_model_create.py  sdf_model_create.spec  training.py  utils.py
test/siren/COLAB CODE/: points.txt  sdf.txt  siren.py
test/siren/logs/exp1/: test.ply
test/siren/logs/exp1/checkpoints/: model_epoch_1500.pth  train_losses_epoch_1500.txt
